[project]
name = "dejavu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "matplotlib>=3.10.1",
    "mysql-connector-python>=9.2.0",
    "numpy>=2.2.4",
    "psycopg2>=2.9.10",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "scipy>=1.15.2",
]
